Use deterministic primary compilation-unit handles in plans